add implicit tags (99% sure it won't break horrifically) and EventQueue.invokeLater for adding to displayList to avoid ConcurrentModificationException